@@ -1,3 +1,7 @@
+2004-01-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* exult.cc, *game.cc: cleared up startup output a bit
+	* audio/Midi.cc: show errors when unable to find .ogg files
+
 2003-12-16    <jeff@mini.nerble.net>
 
 	* Applied Debian signed-char patch.
